--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,10 @@ server:
 
 liteflow:
   rule-source: config/flow.el.xml
+
+# eureka配置信息
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8080/eureka/
+
